[gd_scene load_steps=27 format=2]

[ext_resource path="res://characters/player/Player.gd" type="Script" id=1]
[ext_resource path="res://characters/player/WeaponManager.gd" type="Script" id=2]
[ext_resource path="res://characters/player/GUI.gd" type="Script" id=3]
[ext_resource path="res://weapons/Spells/SpellSpawner.gd" type="Script" id=4]
[ext_resource path="res://weapons/Spells/SpellCast.gd" type="Script" id=5]
[ext_resource path="res://weapons/raw_assets/eyesymbol.png" type="Texture" id=6]
[ext_resource path="res://sounds/foot2.wav" type="AudioStream" id=7]
[ext_resource path="res://characters/CharacterMover.tscn" type="PackedScene" id=8]
[ext_resource path="res://characters/HealthManager.tscn" type="PackedScene" id=9]
[ext_resource path="res://weapons/Weapon.gd" type="Script" id=10]
[ext_resource path="res://characters/player/StaminaManager.gd" type="Script" id=11]
[ext_resource path="res://weapons/DamageArea.tscn" type="PackedScene" id=15]
[ext_resource path="res://weapons/raw_assets/DFAxe.fbx" type="PackedScene" id=16]

[sub_resource type="Animation" id=1]
resource_name = "attack"
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Graphics:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( -2.40319, -1.66746, -1.50559 ), Vector3( 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Graphics:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( -25.5808, 70.769, 8.56581 ), Vector3( 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/path = NodePath("Graphics:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Graphics:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}

[sub_resource type="SphereShape" id=3]
radius = 15.0

[sub_resource type="SphereShape" id=4]
radius = 50.0

[sub_resource type="Gradient" id=5]
offsets = PoolRealArray( 0 )
colors = PoolColorArray( 0, 0, 0, 1 )

[sub_resource type="GradientTexture" id=6]
gradient = SubResource( 5 )

[sub_resource type="Gradient" id=7]
offsets = PoolRealArray( 0 )
colors = PoolColorArray( 0.204641, 0.422122, 1, 1 )

[sub_resource type="GradientTexture" id=8]
gradient = SubResource( 7 )

[sub_resource type="Gradient" id=9]
offsets = PoolRealArray( 0 )
colors = PoolColorArray( 1, 0.151899, 0.37055, 1 )

[sub_resource type="GradientTexture" id=10]
gradient = SubResource( 9 )

[sub_resource type="Gradient" id=11]
offsets = PoolRealArray( 0 )
colors = PoolColorArray( 0.252893, 0.621094, 0.293165, 1 )

[sub_resource type="GradientTexture" id=12]
gradient = SubResource( 11 )

[sub_resource type="CapsuleShape" id=13]
radius = 0.5

[node name="Player" type="KinematicBody" groups=[
"player",
]]
collision_layer = 6
collision_mask = 3
script = ExtResource( 1 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.75, 0 )

[node name="WeaponManager" type="Spatial" parent="Camera"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.244237, -0.691117 )
script = ExtResource( 2 )

[node name="Weapons" type="Spatial" parent="Camera/WeaponManager"]

[node name="Machete" type="Spatial" parent="Camera/WeaponManager/Weapons"]
transform = Transform( 0.212393, 0, 0, 0, 0.212393, 0, 0, 0, 0.212393, 0.26186, 0.0190381, 0.415004 )
script = ExtResource( 10 )
ammo = -1

[node name="BulletEmitters" type="Spatial" parent="Camera/WeaponManager/Weapons/Machete"]
transform = Transform( 4.70825, 0, 0, 0, 4.70825, 0, 0, 0, 4.70825, -1.2329, -7.17915, 1.30001 )

[node name="DamageArea" parent="Camera/WeaponManager/Weapons/Machete/BulletEmitters" instance=ExtResource( 15 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.77003, -0.58705 )

[node name="Graphics" type="Spatial" parent="Camera/WeaponManager/Weapons/Machete"]

[node name="DFAxe" parent="Camera/WeaponManager/Weapons/Machete/Graphics" instance=ExtResource( 16 )]
transform = Transform( -0.123172, 0.407256, -0.262623, 0.00251573, 0.271508, 0.419854, 0.484584, 0.102107, -0.0689332, -1.90156, -0.454681, -0.288673 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Camera/WeaponManager/Weapons/Machete"]
anims/attack = SubResource( 1 )
anims/idle = SubResource( 2 )

[node name="Spell" type="Spatial" parent="Camera/WeaponManager/Weapons"]
script = ExtResource( 5 )
damage = 10
mana = 60
attack_rate = 0.1

[node name="BulletEmitters" type="Spatial" parent="Camera/WeaponManager/Weapons/Spell"]

[node name="SpellSpawner" type="Spatial" parent="Camera/WeaponManager/Weapons/Spell/BulletEmitters"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.391571, -0.1267, -0.192765 )
script = ExtResource( 4 )

[node name="AlertAreaHearing" type="Area" parent="Camera/WeaponManager"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="Camera/WeaponManager/AlertAreaHearing"]
shape = SubResource( 3 )

[node name="AlertAreaLos" type="Area" parent="Camera/WeaponManager"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="Camera/WeaponManager/AlertAreaLos"]
shape = SubResource( 4 )

[node name="FirePoint" type="Spatial" parent="Camera"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.188483 )

[node name="SpotLight" type="SpotLight" parent="Camera"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.0335756 )
light_energy = 0.5
light_indirect_energy = 0.0
light_bake_mode = 0
spot_range = 100.0
spot_angle = 80.0

[node name="GUI" type="Control" parent="Camera"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Camera/GUI"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = -130.0
margin_right = 130.0
margin_bottom = -9.99994
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CrossHair" type="TextureRect" parent="Camera/GUI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
rect_scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 6 )
expand = true
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ManaBar" type="TextureProgress" parent="Camera/GUI"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 30.0
margin_top = -20.0
margin_right = 130.0
rect_rotation = -90.0
texture_under = SubResource( 6 )
texture_progress = SubResource( 8 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthBar" type="TextureProgress" parent="Camera/GUI"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 60.0
margin_top = -20.0
margin_right = 160.0
rect_rotation = -90.0
value = 50.0
texture_under = SubResource( 6 )
texture_progress = SubResource( 10 )
nine_patch_stretch = true

[node name="StaminaBar" type="TextureProgress" parent="Camera/GUI"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 90.0
margin_top = -20.0
margin_right = 190.0
rect_rotation = -90.0
value = 50.0
texture_under = SubResource( 6 )
texture_progress = SubResource( 12 )
nine_patch_stretch = true

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 1, 0 )
shape = SubResource( 13 )

[node name="CharacterMover" parent="." instance=ExtResource( 8 )]

[node name="HealthManager" parent="." instance=ExtResource( 9 )]

[node name="StaminaManager" type="Spatial" parent="."]
script = ExtResource( 11 )

[node name="Foot" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
